--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                                         Welcome to skillDo
                                     <br>
                                 where learning meets action</p>
-                                    <h1 class="display-1 mb-4 animated slideInDown">Land Your Dream Job
-                                    </h1>
+<!--                                     <h1 class="display-1 mb-4 animated slideInDown">Land Your Dream Job
+                                    </h1> -->
                                     <a href="#coursess" class="btn btn-primary py-3 px-5 animated slideInDown">Explore Courses</a>
                                 </div>
                             </div>
@@ -409,7 +409,7 @@
 <br>
     <!-- About End -->
 <!-- Courses--->
-
+<h1 class="h1forcomp">Our Courses</h1>
 <div class="mycourse" id="coursess">
     <!-- Category Filter -->
     <div class="category-filter">
@@ -510,7 +510,7 @@
         <div class="container servv">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3">Our Services</p>
-                <h1 class="display-5 mb-5">Our Other Service</h1>
+                <h1 class="display-5 mb-5">Our Other Services</h1>
             </div>
             <!-- Nav Pills -->
             <div class="nav nav-pills d-flex justify-content-around w-100">
