--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>skillDo Edutech Company</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="skillDo , Skill do , Skilldo training ,Skilldo Online training,skilldo ,skilldo institute " name="keywords">
-    <meta content="skillDo edutech company is one of the best oline training institute land your dream job within three months by taking skillDo courses" name="description">
+    <meta content="skillDo , Skill do , Skilldo trianing ,Skilldo Online training,skilldo ,skilldo institute " name="keywords">
+    <meta content="skillDo edutech company is one of the best online training institute land your dream job within three months by taking skillDo courses" name="description">
 
     <!-- Favicon -->
     <link href="./img/favicons/feviconf.ico" rel="icon">
@@ -219,7 +219,7 @@
     <br>
     <br>
     <div class="brands">
-        <h2 class="title2">Compenies hired our students</h2>
+        <h2 class="title2">Companies hired our students</h2>
          </div> <div class="marquee">
              <div class="marquee-content scrol-left">
                  <!-- Logos sourced from the internet -->
@@ -297,7 +297,7 @@
                             <div class="tab-pane fade" id="nav-mission" role="tabpanel"
                                 aria-labelledby="nav-mission-tab">
                                 <p>To provide high-quality, hands-on training that enhances employability,</p>
-                                <p class="mb-0"> fosters growth, and cultivates a culture of continuous learning</p>
+                                <p class="mb-0"> faster growth, and cultivates a culture of continuous learning</p>
                             </div>
                             <div class="tab-pane fade" id="nav-vision" role="tabpanel" aria-labelledby="nav-vision-tab">
                                 <p>To be the leading platform for transforming potential into expertise,</p>
@@ -366,7 +366,7 @@
                         </div>
                         <div class="ps-3">
                             <h4>Mock Tests/Interviews</h4>
-                            <span>Weekly Mock Tests, Quizzes , Lve coding tests and Interviews</span>
+                            <span>Weekly Mock Tests ,Quizzes , Live coding tests and Interviews</span>
                         </div>
                         <div class="border-end d-none d-lg-block"></div>
                     </div>
@@ -380,8 +380,8 @@
                             <i class="fa fa-users text-white"></i>
                         </div>
                         <div class="ps-3">
-                            <h4>Dout sessions</h4>
-                            <span>Superate  live Dout sessions will be There with trainers and mentors </span>
+                            <h4>Doubt sessions</h4>
+                            <span>Separate  live Doubt sessions with trainers and mentors </span>
                         </div>
                         <div class="border-end d-none d-lg-block"></div>
                     </div>
@@ -835,7 +835,7 @@
                               <span class="faq-icon">+</span>
             </div>
             <div class="faq-content">
-              <p>Absolutely! Our courses are structured to cater to all levels, including beginners. We also offer foundational modules to help you build confidence before diving into advanced topics.</p>
+              <p>Absolutely! Our courses are structured to all levels, including beginners. We also offer foundational modules to help you build confidence before diving into advanced topics.</p>
             </div>
           </div>
       
@@ -855,7 +855,7 @@
               <span class="faq-icon">+</span>
             </div>
             <div class="faq-content">
-              <p>You can enroll by visiting our website, selecting your desired course, and completing the registration process. Alternatively, contact our support team for assis</p>
+              <p>You can enroll by visiting our website, selecting your desired course, and completing the registration process. Alternatively, contact our support team for assistance </p>
             </div>
           </div>
           <div class="faq-item">
