--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>skillDo Edutech Company</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="skillDo , Skill do , Skilldo training ,Skilldo Online training,skilldo ,skilldo institute " name="keywords">
-    <meta content="skillDo edutech company is one of the best oline training institute land your dream job within three months by taking skillDo courses" name="description">
+    <meta content="skillDo edutech company is one of the best online training institute land your dream job within three months by taking skillDo courses" name="description">
 
     <!-- Favicon -->
     <link href="./img/favicons/feviconf.ico" rel="icon">
@@ -219,7 +219,7 @@
     <br>
     <br>
     <div class="brands">
-        <h2 class="title2">Compenies hired our students</h2>
+        <h2 class="title2">Companies hired our students</h2>
          </div> <div class="marquee">
              <div class="marquee-content scrol-left">
                  <!-- Logos sourced from the internet -->
