--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>skillDo Edutech Company</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="skillDo , Skill do , Skilldo training ,Skilldo Online training,skilldo ,skilldo institute " name="keywords">
-    <meta content="skillDo edutech company is one of the best online training institute land your dream job within three months by taking skillDo courses" name="description">
+    <meta content="skillDo , Skill do , Skilldo training ,Skilldo Online trianing,skilldo ,skilldo institute " name="keywords">
+    <meta content="skillDo edutech company is one of the best online trianing institute land your dream job within three months by taking skillDo courses" name="description">
 
     <!-- Favicon -->
     <link href="./img/favicons/feviconf.ico" rel="icon">
@@ -114,7 +114,7 @@
                             <a href="#projectss" class="dropdown-item">Projects</a>
                             <a href="#featuress" class="dropdown-item">Features</a>
                             <a href="#teamm" class="dropdown-item">Team</a>
-                            <a href="#testy" class="dropdown-item">Testimoniala</a>
+                            <a href="#testy" class="dropdown-item">Testimonials</a>
                             <a href="#faqq" class="dropdown-item">FAQs</a>
                             <!-- <a href="#" class="dropdown-item">404 Page</a> -->
                         </div>
@@ -296,7 +296,7 @@
                             </div>
                             <div class="tab-pane fade" id="nav-mission" role="tabpanel"
                                 aria-labelledby="nav-mission-tab">
-                                <p>To provide high-quality, hands-on training that enhances employability,</p>
+                                <p>To provide high-quality, hands-on trianing that enhances employability,</p>
                                 <p class="mb-0"> fosters growth, and cultivates a culture of continuous learning</p>
                             </div>
                             <div class="tab-pane fade" id="nav-vision" role="tabpanel" aria-labelledby="nav-vision-tab">
@@ -380,8 +380,8 @@
                             <i class="fa fa-users text-white"></i>
                         </div>
                         <div class="ps-3">
-                            <h4>Dout sessions</h4>
-                            <span>Superate  live Dout sessions will be There with trainers and mentors </span>
+                            <h4>Doubt sessions</h4>
+                            <span>Superate  live Doubt sessions will be There with trainers and mentors </span>
                         </div>
                         <div class="border-end d-none d-lg-block"></div>
                     </div>
