--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>skillDo Edutech Company</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="skillDo , Skill do , Skilldo training ,Skilldo Online trianing,skilldo ,skilldo institute " name="keywords">
+    <meta content="skill ,do ,skillDo , Skill do , Skilldo training ,Skilldo Online trianing,skilldo ,skilldo institute " name="keywords">
     <meta content="skillDo edutech company is one of the best online trianing institute land your dream job within three months by taking skillDo courses" name="description">
 
     <!-- Favicon -->
@@ -172,7 +172,7 @@
                                     <p
                                         class="d-inline-block border border-white rounded text-primary fw-semi-bold py-1 px-3 animated slideInDown">
                                         Welcome to skillDo</p>
-                                    <h1 class="display-1 mb-4 animated slideInDown">skillDo one of the best online trianing institute</h1>
+                                    <h1 class="display-1 mb-4 animated slideInDown">skill Do one of the best online trianing institute</h1>
                                     <a href="#coursess" class="btn btn-primary py-3 px-5 animated slideInDown">Explore Courses</a>
                                 </div>
                             </div>
@@ -195,7 +195,7 @@
         <div class="pavans">
           <div class="container1">
             
-              <h1 class="title1">skillDo</h1>
+              <h1 class="title1">skill Do</h1>
               <br>
               <h2 class="description1">ప్రతి అడుగు ఒక కొత్త అవకాశాన్ని తెస్తుంది, ప్రతి అవకాశం ఒక విజయాన్ని అందిస్తుంది
               </h2>
@@ -223,21 +223,21 @@
          </div> <div class="marquee">
              <div class="marquee-content scrol-left">
                  <!-- Logos sourced from the internet -->
-                 <img src="./img/TCS.NS.png" alt="TCS">
-                 <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="Google">
-                 <img src="./img/CAP.PA_BIG.png" alt="capgemini">
-                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
+                 <img src="./img/TCS.NS.png" alt="skill">
+                 <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="skill">
+                 <img src="./img/CAP.PA_BIG.png" alt="skill">
+                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="skill">
                  <img src="./img/INFY.png" alt="Infosys">
-                 <img src="./img/VRTU_BIG.png" alt="virtusa">
-                 <img src="./img/ACN_BIG.png" alt="Accenture">
+                 <img src="./img/VRTU_BIG.png" alt="skill do">
+                 <img src="./img/ACN_BIG.png" alt="skill do">
                  <!-- Duplicate items for a seamless loop -->
-                 <img src="./img/TCS.NS.png" alt="TCS">
-                 <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="Google">
+                 <img src="./img/TCS.NS.png" alt="skill do">
+                 <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="do">
                  <img src="./img/CAP.PA_BIG.png" alt="capgemini">
-                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
+                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="skill do">
                  <img src="./img/INFY.png" alt="Infosys">
-                 <img src="./img/VRTU_BIG.png" alt="virtusa">
-                 <img src="./img/ACN_BIG.png" alt="Accenture">
+                 <img src="./img/VRTU_BIG.png" alt="skill do">
+                 <img src="./img/ACN_BIG.png" alt="skill do">
              </div>
        </div>
     </div>
@@ -245,20 +245,20 @@
         <div class="marquee-content scroll-right">
             <!-- Logos sourced from the internet -->
             <img src="./img/TCS.NS.png" alt="TCS">
-                 <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="Google">
-                 <img src="./img/CAP.PA_BIG.png" alt="capgemini">
-                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
-                 <img src="./img/INFY.png" alt="Infosys">
-                 <img src="./img/VRTU_BIG.png" alt="virtusa">
-                 <img src="./img/ACN_BIG.png" alt="Accenture">
+                 <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="skilldo">
+                 <img src="./img/CAP.PA_BIG.png" alt="skill do edutech">
+                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="skill do">
+                 <img src="./img/INFY.png" alt="skilldo opc pvt ltd">
+                 <img src="./img/VRTU_BIG.png" alt="skilldo opc pvt ltd">
+                 <img src="./img/ACN_BIG.png" alt="skilldo opc pvt ltd">
             <!-- Duplicate items for a seamless loop -->
-            <img src="./img/TCS.NS.png" alt="TCS">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="Google">
+            <img src="./img/TCS.NS.png" alt="skilldo opc pvt ltd">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="skilldo opc pvt ltd">
             <img src="./img/CAP.PA_BIG.png" alt="capgemini">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
-            <img src="./img/INFY.png" alt="Infosys">
-            <img src="./img/VRTU_BIG.png" alt="virtusa">
-            <img src="./img/ACN_BIG.png" alt="Accenture">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="skill do opc private limited">
+            <img src="./img/INFY.png" alt="skill do opc pvt ltd">
+            <img src="./img/VRTU_BIG.png" alt="skilldo training institute">
+            <img src="./img/ACN_BIG.png" alt="skill do training institute ">
         </div>
     </div>
      </div>
@@ -267,7 +267,7 @@
         <div class="container">
             <div class="row g-4 align-items-end mb-4">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <img class="img-fluid rounded" src="img/aboutt.jpg" alt="pavan">
+                    <img class="img-fluid rounded" src="img/aboutt.jpg" alt="java training institute">
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <p class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3">About Us</p>
@@ -307,7 +307,7 @@
                     </div>
                 </div>
             </div>
-            <h1>Why skillDo</h1>
+            <h1>Why skill Do</h1>
             <div class="border rounded p-4 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="row g-4">
                     <div class="col-lg-4 wow fadeIn" data-wow-delay="0.3s">
@@ -317,7 +317,7 @@
                                     <i class="fa fa-users text-white"></i>
                                 </div>
                                 <div class="ps-3">
-                                    <h4>100% Online</h4>
+                                    <h4>100% Online Training</h4>
                                     <span>Pure Online live sessions with flexible timings  after college or working Hours </span>
                                 </div>
                                 <div class="border-end d-none d-lg-block"></div>
@@ -444,7 +444,7 @@
       </div>
   <!-- IT Category Course -->
       <div class="course-card it">
-        <img src="./img/sql logo1.jpg" alt="SQl Course">
+        <img src="./img/sql logo1.jpg" alt="SQl Course skill do">
         <h3>SQL/PLSQL Course Online Training November 2024</h3>
         <p>skillDo</p>
         <p class="price"><span class="old-price">₹9,999</span> ₹5,999</p>
@@ -455,7 +455,7 @@
   
       <!-- Non-IT Category Course -->
       <div class="course-card non-it">
-        <img src="./img/ms word logo.jpg" alt="Ms Word Course">
+        <img src="./img/ms word logo.jpg" alt="Ms Word Course skill do ">
         <h3>MS word/Office/Excell/Typing Course 2024</h3>
         <p>skillDo</p>
         <p class="price"><span class="old-price">₹9,999</span> ₹5,999</p>
