--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="./img/Untitled design.jpg" alt="Image">
+                    <img class="w-100" src="./img/slider2.png" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-start">
