--- a/index.html
+++ b/index.html
@@ -426,9 +426,9 @@
       <!-- IT Category Course -->
       <div class="course-card it">
         <img  src="./img/java logo.png" alt="Data Science Course">
-        <h3>Java  Course Online Training November 2024</h3>
+        <h3>Java  Course Online Training </h3>
         <p>skillDO</p>
-        <p class="price"><span class="old-price">₹29,999</span> ₹14,999</p>
+        <p class="price"><span class="old-price">₹0000</span> ₹0000</p>
         <button onclick="location.href='https://skilldo.graphy.com/courses/Core-Java--6714afd313ed760e2ee8600b1';" class="enroll-btn" > View & Enroll
              </button>
       </div>
@@ -436,18 +436,18 @@
       <!-- IT Category Course -->
       <div class="course-card it">
         <img src="./img/python logo.png" alt="Python Full Stack Course">
-        <h3>Python  Course Online Training November 2024</h3>
+        <h3>Python  Course Online Training </h3>
         <p>skillDo</p>
-        <p class="price"><span class="old-price">₹29,999</span> ₹13,999</p>
+        <p class="price"><span class="old-price">₹0000</span> ₹0000</p>
         <button onclick="location.href='https://skilldo.graphy.com/courses/Python-67193887f196b1431ecb230b1';" class="enroll-btn">View & Enroll</button>
 
       </div>
   <!-- IT Category Course -->
       <div class="course-card it">
         <img src="./img/sql logo1.jpg" alt="SQl Course skill do">
-        <h3>SQL/PLSQL Course Online Training November 2024</h3>
+        <h3>SQL/PLSQL Course Online Training</h3>
         <p>skillDo</p>
-        <p class="price"><span class="old-price">₹9,999</span> ₹5,999</p>
+        <p class="price"><span class="old-price">₹000</span> ₹0000</p>
         <button class="enroll-btn">View & Enroll</button>
         
 
@@ -456,9 +456,9 @@
       <!-- Non-IT Category Course -->
       <div class="course-card non-it">
         <img src="./img/ms word logo.jpg" alt="Ms Word Course skill do ">
-        <h3>MS word/Office/Excell/Typing Course 2024</h3>
+        <h3>MS word/Office/Excell/Typing Course 2025</h3>
         <p>skillDo</p>
-        <p class="price"><span class="old-price">₹9,999</span> ₹5,999</p>
+        <p class="price"><span class="old-price">₹000</span> ₹0000</p>
         <button class="enroll-btn">view & Enroll</button>
 
       </div>
@@ -466,9 +466,9 @@
       <!-- Other Category Course -->
       <div class="course-card other">
         <img src="power_bi_sql.jpg" alt="Power BI + SQL Course">
-        <h3>Power BI + SQL Course Online Training November 2024</h3>
+        <h3>Power BI + SQL Course Online Training</h3>
         <p>skillDo</p>
-        <p class="price"><span class="old-price">₹8,999</span> ₹7,999</p>
+        <p class="price"><span class="old-price">₹0000</span> ₹0000</p>
         <button class="enroll-btn">view & Enroll</button>
       </div>
     </div>
