--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>skillDo Edutech Company</title>
+    <title>skillDo Infotech pvt ltd</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="skill ,do ,skillDo , Skill do , Skilldo training ,Skilldo Online trianing,skilldo ,skilldo institute " name="keywords">
-    <meta content="skillDo edutech company is one of the best online trianing institute land your dream job within three months by taking skillDo courses" name="description">
+    <meta content="skill ,do ,skillDo infotech , Skill do , Skilldo training ,Skilldo Online trianing,skilldoinfotech ,skilldo institute " name="keywords">
+    <meta content="skillDo is one of the best online trianing institute land your dream job within three months by taking skillDo courses" name="description">
 
     <!-- Favicon -->
     <link href="./img/favicons/feviconf.ico" rel="icon">
