--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                 <small    class="ms-4"></i>skillDO where learning meets action</small>
             </div>
             <div class="col-lg-6 px-5 text-end">
-                <small><i class="fa fa-envelope text-primary me-2"></i>skilldo@gmail.com</small>
-                <small class="ms-4"><i class="fa fa-phone-alt text-primary me-2"></i>9019324757</small>
+                <small><i class="fa fa-envelope text-primary me-2"></i>skilldo.in@gmail.com</small>
+                <small class="ms-4"><i class="fa fa-phone-alt text-primary me-2"></i>6302444382</small>
             </div>
         </div>
 
@@ -218,7 +218,7 @@
     </div>
     <br>
     <br>
-    <div class="brands">
+<!--     <div class="brands">
         <h2 class="title2">Companies hired our students</h2>
          </div> <div class="marquee">
              <div class="marquee-content scrol-left">
@@ -261,7 +261,7 @@
             <img src="./img/ACN_BIG.png" alt="skill do training institute ">
         </div>
     </div>
-     </div>
+     </div> -->
     <!-- About Start -->
     <div class="container-xxl py-5" id="aboutt">
         <div class="container">
@@ -475,7 +475,7 @@
   </div>
 <!-- Courses end --->
     <!-- Facts Start -->
-    <div class="container-fluid facts my-5 py-5">
+<!--     <div class="container-fluid facts my-5 py-5">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.1s">
@@ -504,7 +504,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Facts End -->
 
     <!-- Service Start -->
@@ -947,9 +947,9 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> Bangalore</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>9019324757</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>skilldo@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> #142 3rd cross 24th main agara, Banagalore 560102</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>6302444382</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>skilldo.in@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i
                                 class="fab fa-instagram "></i></a>
