--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
          </div> <div class="marquee">
              <div class="marquee-content scrol-left">
                  <!-- Logos sourced from the internet -->
-                 <img src="./img/TCS.NS.png" alt="skill">
+<!--                  <img src="./img/TCS.NS.png" alt="skill">
                  <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="skill">
                  <img src="./img/CAP.PA_BIG.png" alt="skill">
                  <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="skill">
@@ -231,28 +231,28 @@
                  <img src="./img/VRTU_BIG.png" alt="skill do">
                  <img src="./img/ACN_BIG.png" alt="skill do">
                  <!-- Duplicate items for a seamless loop -->
-                 <img src="./img/TCS.NS.png" alt="skill do">
+<!--                  <img src="./img/TCS.NS.png" alt="skill do">
                  <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="do">
                  <img src="./img/CAP.PA_BIG.png" alt="capgemini">
                  <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="skill do">
                  <img src="./img/INFY.png" alt="Infosys">
                  <img src="./img/VRTU_BIG.png" alt="skill do">
                  <img src="./img/ACN_BIG.png" alt="skill do">
-             </div>
-       </div>
+             </div> -->
+<!--        </div>
     </div>
      <div class="marquee">
-        <div class="marquee-content scroll-right">
+        <div class="marquee-content scroll-right"> --> -->
             <!-- Logos sourced from the internet -->
-            <img src="./img/TCS.NS.png" alt="TCS">
+<!--             <img src="./img/TCS.NS.png" alt="TCS">
                  <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="skilldo">
                  <img src="./img/CAP.PA_BIG.png" alt="skill do edutech">
                  <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="skill do">
                  <img src="./img/INFY.png" alt="skilldo opc pvt ltd">
                  <img src="./img/VRTU_BIG.png" alt="skilldo opc pvt ltd">
-                 <img src="./img/ACN_BIG.png" alt="skilldo opc pvt ltd">
+                 <img src="./img/ACN_BIG.png" alt="skilldo opc pvt ltd"> -->
             <!-- Duplicate items for a seamless loop -->
-            <img src="./img/TCS.NS.png" alt="skilldo opc pvt ltd">
+<!--             <img src="./img/TCS.NS.png" alt="skilldo opc pvt ltd">
             <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="skilldo opc pvt ltd">
             <img src="./img/CAP.PA_BIG.png" alt="capgemini">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="skill do opc private limited">
@@ -261,7 +261,7 @@
             <img src="./img/ACN_BIG.png" alt="skill do training institute ">
         </div>
     </div>
-     </div> -->
+     </div> --> -->
     <!-- About Start -->
     <div class="container-xxl py-5" id="aboutt">
         <div class="container">
